--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "element-ui": "^2.13.2",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
     "jsbarcode": "^3.11.0",
